# StationsApp

./: AboutPage.qml  AndroidFolderDialog.qml  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  PlayerControls.qml  PlayerPage.qml  README.md  RadioBrowserApi.js  RadioBrowserPage.qml  SettingsPage.qml  StationDelegate.qml  StationDetailsDialog.qml  StationsListPage.qml  StreamlinkBackend.qml  StreamlinkPage.qml  androidpermissions.cpp  androidpermissions.h  fslistmodel.cpp  fslistmodel.h  icons.qrc  launcher.cpp  launcher.h  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  stations-app.pro
android/: AndroidManifest.xml
icons/material/: index.theme
